<?xml version="1.0"?>
<package>
  <name>ultrasound_avoidance</name>
  <version>1.0.0</version>
  <description>Designed to work in conjunction with ultrasound sensor</description>
  <maintainer email="yimjamesjose@gmail.com">ros</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <export>
  </export>
</package>
